# fluentval

./: Cargo.toml  LICENSE  README.md
.github/workflows/: pr.yml  publish.yml
examples/: main.rs
src/: builder.rs  error.rs  fluent_validator.rs  lib.rs  main.rs  rule.rs  traits.rs
tests/: lib_tests.rs
