[package]
name = "fluentval"
version = "0.1.5"
edition = "2021"
authors = ["https://github.com/bezaeel"]
description = "A fluent validation library for Rust with a builder pattern API"
license = "MIT OR Apache-2.0"
repository = "https://github.com/bezaeel/fluentval"
keywords = ["validation", "fluent", "validator", "builder", "rules"]

[lib]
name = "fluentval"
path = "src/lib.rs"

[dependencies]
regex = "1.10"
